# mdrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: writ-feasibility.md
experiments/writ_spike/: Cargo.toml
experiments/writ_spike/src/: main.rs
scripts/: package-macos.sh  package-windows.ps1
src/: actions.rs  app.rs  app_icon.rs  app_title_bar.rs  assets.rs  editor.rs  file_loader.rs  main.rs  preview.rs  style_config.rs  workspace.rs
src/app/: logic.rs
src/app/render/: mod.rs  panels.rs  settings.rs  sidebar.rs
src/app_title_bar/: menus.rs  mod.rs
src/assets/: icon_1024.icns
src/assets/AppIcon.appiconset/: Contents.json
tools/ico-builder/: Cargo.toml
tools/ico-builder/src/: main.rs
