[package]
name = "mdrs"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown editor and preview app built with Rust and gpui"
license = "MIT"

[[bin]]
name = "mdrs"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
ropey = "2.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# 平台特定的优化
[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
