[package]
name = "mdrs"
version = "0.1.0"
edition = "2021"
description = "A lightweight Markdown editor and preview app built with Rust and gpui"
license = "MIT"

[[bin]]
name = "mdrs"
path = "src/main.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
ropey = "2.0.0-beta.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[package.metadata.packager]
product-name = "MDRS"
identifier = "com.zhaogongchengsi.mdrs"
formats = ["dmg", "nsis"]
icons = ["src/assets/icon_1024.icns", "src/assets/icon_1024.ico"]
resources = [{ src = "src/assets", target = "assets" }]
license-file = "LICENSE"
out-dir = "dist/packager"
before-packaging-command = "cargo build --release"

[[package.metadata.packager.binaries]]
path = "mdrs"
main = true

[package.metadata.packager.macos]
# Reserved for future macOS signing and notarization settings.

[package.metadata.packager.windows]
# Reserved for future Windows-specific signing settings.

[package.metadata.packager.nsis]
installer-icon = "src/assets/icon_1024.ico"
installer-mode = "currentUser"

# 平台特定的优化
[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
